
SET(LIBRARY_NAME "rsbts")
SET(BINARY_NAME "timesync")

# --- dependencies ---

ADD_SUBDIRECTORY(src)
IF(OPTION_BUILD_TESTS AND GMOCK_AVAILABLE)
    ADD_SUBDIRECTORY(test)
ENDIF()

ENABLE_TESTING()
IF(OPTION_BUILD_EXAMPLES) # AND SPREAD_EXECUTABLE)
    ADD_SUBDIRECTORY(examples)
ENDIF()

CONFIGURE_FILE(RSBTSConfig.cmake.in "${CMAKE_BINARY_DIR}/RSBTSConfig.cmake" @ONLY)
INSTALL(FILES "${CMAKE_BINARY_DIR}/RSBTSConfig.cmake" DESTINATION share/RSBTS)
CONFIGURE_FILE(RSBTSConfigVersion.cmake.in "${CMAKE_BINARY_DIR}/RSBTSConfigVersion.cmake" @ONLY)
INSTALL(FILES "${CMAKE_BINARY_DIR}/RSBTSConfigVersion.cmake" DESTINATION share/RSBTS)

EXPORT(TARGETS ${LIBRARY_NAME} FILE "${CMAKE_BINARY_DIR}/RSBTSDepends.cmake")
INSTALL(EXPORT RSBTSDepends
        DESTINATION "share/RSBTS")

